# nrf52840dk-cmake-blinky

./: .gitignore  BuildOptions.cmake  CMakeLists.txt  Makefile  README.md
cmake/toolchains/cross/: nRF52840.cmake
src/app/: CMakeLists.txt  board_config.h  main.c
src/lib/: CMakeLists.txt
src/lib/cmsis/: CMakeLists.txt
src/lib/nrfx/: CMakeLists.txt
src/lib/nrfx/doc/: warnings_nrfx.txt
src/lib/nrfx/doc/html/: annotated.html  annotated.js  classes.html  dir_096b0de097b3e98f91191e9d894d4363.html  dir_14bc92f4b96c8519b376567118ac28b3.html  dir_19d806e154b23a5f4c4c08b2e30365a6.html  dir_2fb72a3b416c6063116b236f714eaf73.html  dir_322d946b6a936d6e56321660692d0c63.html  dir_43fa2428232896918e333aab33ef05b6.html  dir_507bca872cbea0e05b5ebdf850947a53.html  dir_52c912f73dac9c4c0e442232e1b2bd80.html  dir_861f50189fda057e6c57d1c1130602b3.html  dir_8e6b0af5d155720a42c53ab09464df84.html  dir_9e33498cbf8add5239856b1be4e86581.html  dir_b6daf3ca42b424cb39c02846dd6ed28a.html  dir_dfb043b1e2695a31d4b1776696116a63.html  dir_e68e8157741866f444e17edd764ebbae.html  dir_e6d07044536b171ca14d65bee9abbf51.html  dir_ec4e51aa66b47c1149ac8e6ceed42e71.html  dir_ee023d43c33bfccc31aa50a48a76892b.html  doxygen.css  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_g.html  functions_h.html  functions_i.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_r.html  functions_s.html  functions_t.html  functions_u.html  functions_v.html  (+358 more)
src/lib/nrfx/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  enums_0.js  enumvalues_0.js  functions_0.js  groups_0.js  groups_1.js  groups_10.js  groups_11.js  groups_12.js  groups_13.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  groups_7.js  groups_9.js  groups_a.js  groups_b.js  groups_c.js  groups_e.js  (+27 more)
src/lib/nrfx/templates/: nrfx_glue.h
src/utility/: CMakeLists.txt
src/utility/nrf_delay/: nrf_delay.h
